--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: Unclecode's Blog
+subtitle: An uncle on coding road...
 description:
-author: John Doe
+author: liangjz
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com/blog
+url: http://liangjingzhan.github.io/blog
 root: /blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
