--- a/themes/clean-blog/_config.yml
+++ b/themes/clean-blog/_config.yml
@@ -9,6 +9,7 @@ menu_title:
 
 # URL of the Home page image
 index_cover: /blog/img/home-bg.jpg
+archive_cover: /blog/img/archive-bg.jpg
 
 # Default post title
 default_post_title: Untitled
