update footer, weibo

--- a/themes/clean-blog/_config.yml
+++ b/themes/clean-blog/_config.yml
@@ -30,4 +30,5 @@ google_analytics:
 # Social Accounts
 twitter_url:
 facebook_url:
+weibo_url: http://weibo.com/fatzhana
 github_url: https://github.com/liangjingzhan
