use duoshuo for comment

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Unclecode
 subtitle: An uncle on coding road...
 description:
 author: liangjingzhan
-language:
+language: default
 timezone:
 
 # URL
